--- a/backend-mongo/package.json
+++ b/backend-mongo/package.json
@@ -23,7 +23,12 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/microservices": "^8.2.1",
+    "@nestjs/mongoose": "^9.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "amqp-connection-manager": "^3.7.0",
+    "amqplib": "^0.8.0",
+    "mongoose": "^6.0.13",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
