--- a/backend-psql/package.json
+++ b/backend-psql/package.json
@@ -26,6 +26,8 @@
     "@nestjs/microservices": "^8.2.1",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/typeorm": "^8.0.2",
+    "amqp-connection-manager": "^3.7.0",
+    "amqplib": "^0.8.0",
     "mysql2": "^2.3.3",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
