--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
     restart: always
     depends_on:
       - db
+      - rabbitmq
     networks:
       - nestjs-msa-network
 
@@ -72,6 +73,7 @@ services:
     restart: always
     depends_on:
       - db
+      - rabbitmq
     networks:
       - nestjs-msa-network
 
